@@ -10,6 +10,7 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -152,7 +153,7 @@ public class MobileApiClient {
     // ========== Métodos HTTP Auxiliares ==========
     
     private String doGet(String urlString) throws Exception {
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         
         try {
@@ -176,7 +177,7 @@ public class MobileApiClient {
     }
     
     private String doPost(String urlString, String jsonBody) throws Exception {
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         
         try {
